@@ -27,5 +27,5 @@ all:
 clean:
 
 install:
-	$(INSTALL_DIR) $(DESTDIR)$(PROFDIR)
-	$(INSTALL_DATA) $(PROFILE_LIST) $(DESTDIR)$(PROFDIR)
+	$(INSTALL_DIR_HOME) $(DESTDIR)$(PROFDIR)
+	$(INSTALL_DATA_HOME) $(PROFILE_LIST) $(DESTDIR)$(PROFDIR)
