@@ -1,3 +1,8 @@
+2005-12-25 Oliver Brakmann <oliverbrakmann@users.berlios.de>
+
+	* Makefile.defs, Makefile, profiles/Makefile: Finished `make install'
+	  target in the Makefile.
+
 2005-12-24 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
 	* scripts/pkginfo.in: Found another one ;-).
